[project]
name = "jyyslide-md"
version = "0.1.0"
description = ""
authors = [{ name = "zweix123", email = "1979803044@qq.com" }]
requires-python = "~=3.10"
readme = "README.md"
dependencies = [
    "requests>=2.28.2,<3",
    "jinja2>=3.1.2,<4",
    "markdown>=3.4.1,<4",
    "pyquery>=2.0.0,<3",
    "pygments>=2.14.0,<3",
    "lxml>=5.0.0,<6",
    "pyyaml>=6.0.1,<7",
    "types-markdown>=3.4.2.6,<4",
    "types-requests>=2.28.11.17,<3",
    "types-pyyaml>=6.0.12.12,<7",
]

[dependency-groups]
dev = [
    "black>=23.1.0,<24",
    "mypy>=1.1.1,<2",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
